--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -5,12 +5,12 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "react": "^16.4.2",
-    "react-dom": "^16.4.2",
-    "react-scripts-ts": "2.17.0",
     "react-bootstrap": "^0.31.5",
+    "react-dom": "^16.4.2",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
+    "react-scripts-ts": "^2.17.0",
     "rimraf": "^2.6.2"
   },
   "scripts": {
